# weather

./: main.py  pyproject.toml
weather/: deps.py  router.py  schemas.py  service.py
